some more progress :')

--- a/3.1_storing_data/storing_data_(good).ipynb
+++ b/3.1_storing_data/storing_data_(good).ipynb
@@ -52,7 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "id": "e677278b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9ae32342",
    "metadata": {},
    "outputs": [
@@ -68,7 +78,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "py_list=[\"a1\", \"b2\", \"c3\", \"d4\", \"e5\",\"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
     "np_array=np.array(py_list)\n",
     "\n",
@@ -228,11 +237,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d8a19282",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 'D']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['4', 'D'], dtype='<U21')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py_list_2d = [[1, \"A\"], [2, \"B\"], [3, \"C\"], [4, \"D\"],\n",
+    "              [5, \"E\"], [6, \"F\"], [7, \"G\"], [8, \"H\"],\n",
+    "              [9, \"I\"], [10, \"J\"]]\n",
+    "\n",
+    "np_array_2d = np.array(py_list_2d)\n",
+    "\n",
+    "# position 4\n",
+    "print(py_list_2d[3])\n",
+    "np_array_2d[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a5f6d734",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.str_('4')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# first element at position 4\n",
+    "print(py_list_2d[3][0])\n",
+    "np_array_2d[3, 0]\n",
+    "# syntax for arrays use a single pair of square brackets []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c1dbb055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 'A'], [2, 'B'], [3, 'C']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([['1', 'A'],\n",
+       "       ['2', 'B'],\n",
+       "       ['3', 'C']], dtype='<U21')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fist 3 elements\n",
+    "print(py_list_2d[:3])\n",
+    "np_array_2d[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fadb2db5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'A']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['1', '2', '3'], dtype='<U21')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(py_list_2d[:3][0])   # it just gives the first of the list we get from py_list_2d[:3]\n",
+    "np_array_2d[:3, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d4bd251c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 'D']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['4', '5', '6'], dtype='<U21')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(py_list_2d[3:6][0])\n",
+    "np_array_2d[3:6, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "35413426",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1', '2', '3', '4', '5', '6', '7', '8', '9', '10'], dtype='<U21')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If you want ‘everything’ you just use \":\"\n",
+    "np_array_2d[:, 0]"
+   ]
   },
   {
    "attachments": {},
@@ -241,6 +421,79 @@
    "metadata": {},
    "source": [
     "## 1.4 Growing lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb2f0f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 1, 2, 1, 2, 1, 2, 1, 2]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=[1, 2]*5\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a73cd8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=[1]\n",
+    "x= x + [2]\n",
+    "x+= [3]\n",
+    "x.append(4)    # runs 1.5x faster than others\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b2f854a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, [10, 11, 12]]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# incorporating lists\n",
+    "x = [1, 2, 3]\n",
+    "x += [4, 5, 6]\n",
+    "x.extend([7, 8, 9])\n",
+    "x.append([10, 11, 12])\n",
+    "x"
    ]
   },
   {
@@ -262,12 +515,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2e3d2c2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# touples are similar to lists except they use () and are immutable (can't be changed after creation)\n",
+    "a = (1,2,3)\n",
+    "print(a[0])"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
    "metadata": {},
    "source": [
     "## 1.6 Be VERY careful when copying"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e14349b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# of lists and arrays\n",
+    "x=[1, 2, 3]\n",
+    "y=x.copy()\n",
+    "z=x.copy()\n",
+    "# do NOT just equate y to x and z to x."
    ]
   },
   {
