--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -19,16 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e202c77a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4110824089.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mtemperatures_f+=t: 9/5*t+32\u001b[39m\n                     ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0°C = 32.0°F\n",
+      "5°C = 41.0°F\n",
+      "10°C = 50.0°F\n",
+      "15°C = 59.0°F\n",
+      "20°C = 68.0°F\n",
+      "25°C = 77.0°F\n",
+      "30°C = 86.0°F\n",
+      "35°C = 95.0°F\n",
+      "40°C = 104.0°F\n",
+      "45°C = 113.0°F\n",
+      "50°C = 122.0°F\n"
      ]
     }
    ],
@@ -37,9 +46,73 @@
     "    0, 5, 10, 15, 20, 25,\n",
     "    30, 35, 40, 45, 50\n",
     "]\n",
-    "temperatures_f = {}\n",
-    "for t in temperatures_celsius:\n",
-    "    temperatures_f += t: 9/5*t+32"
+    "for temp_c in temperatures_celsius:\n",
+    "    temp_f = 9/5*temp_c+32\n",
+    "    print(f\"{temp_c}°C = {temp_f:.1f}°F\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a5266a5",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 (Multiplication table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d594456d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 1   2   3   4   5   \n",
+      "\n",
+      "2 : 2   4   6   8   10   \n",
+      "\n",
+      "3 : 3   6   9   12   15   \n",
+      "\n",
+      "4 : 4   8   12   16   20   \n",
+      "\n",
+      "5 : 5   10   15   20   25   \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in [1,2,3,4,5]:\n",
+    "    print(f\"{n} : \", end = \"\")\n",
+    "    for m in [1,2,3,4,5]:\n",
+    "        print(f\"{m*n}\", end=\"   \")\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1f8711b",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 (Simulating a Coin Flip Experiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff018680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "for i in range(10):\n",
+    "    result = np.random.rand(10)\n",
+    "    result[result<0.5]=0\n",
+    "    result[result>=0.5]=1\n",
+    "    mask_result = result[mask]\n",
+    "\n",
+    "    print(f\"Experiment {i}: No. of heads = {}\")"
    ]
   }
  ],
