--- a/4.1_loops/loops_(good).ipynb
+++ b/4.1_loops/loops_(good).ipynb
@@ -76,11 +76,61 @@
     "# use continue to skip and iteration and move on to the next\n",
     "for power in range(5):\n",
     "    if power == 3:\n",
-    "        continue        # Don't proceed further\n",
-    "                        # IN THE CURRENT LOOP\n",
-    "                        # if i == 3\n",
+    "        continue\n",
     "    number = 10**power\n",
     "    print(power, number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d28607f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(10):\n",
+    "    if number % 2 == 0:\n",
+    "        continue\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "13bb3ce6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use break to stop while loops\n",
+    "number=0\n",
+    "while True:\n",
+    "    print(number)\n",
+    "    number += 1\n",
+    "    if number > 4: break"
    ]
   },
   {
@@ -102,12 +152,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5f1fb14c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 5, 10, 17]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[number**2+1 for number in range(5)]"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
    "metadata": {},
    "source": [
     "## 2.2 List comprehension with conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "37bb3f26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[number for number in range(10) if number % 2 ==0]"
    ]
   },
   {
@@ -129,12 +221,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1636ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y, z=[1, 2, 3]\n",
+    "print(f\"x = {x}, y = {y}, z = {z}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "00a1625e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_superhero_info = [['Natasha Romanoff', 'Black Widow'],\n",
+    "                    ['Tony Stark', 'Iron Man'],\n",
+    "                    ['Stephen Strange', 'Doctor Strange']]\n",
+    "\n",
+    "for real_name, super_name in py_superhero_info:\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "123456",
    "metadata": {},
    "source": [
     "## 3.2 for with zip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "406b30b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# zip can combine two lists\n",
+    "super_names = [\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]\n",
+    "\n",
+    "for real_name, super_name in zip(real_names,super_names):\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")"
    ]
   },
   {
@@ -148,11 +301,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6882f8f0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "superhero_info={\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                \"Tony Stark\": \"Iron Man\",\n",
+    "                \"Stephen Strange\": \"Doctor Strange\"}\n",
+    "\n",
+    "for key, value in superhero_info.items():\n",
+    "    print(f\"{key} is Marvel's {value}!\")\n",
+    "# the items() method returns the key-value pairs of the dictionary, as tuples in a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "69cf6883",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# or to directly access the keys:\n",
+    "for real_name in superhero_info.keys():\n",
+    "    super_name=superhero_info[real_name]\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")"
+   ]
   },
   {
    "attachments": {},
