will start on functions next time :')

--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -100,19 +100,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ff018680",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment 0: No. of heads = 5\n",
+      "Experiment 1: No. of heads = 10\n",
+      "Experiment 2: No. of heads = 6\n",
+      "Experiment 3: No. of heads = 5\n",
+      "Experiment 4: No. of heads = 7\n",
+      "Experiment 5: No. of heads = 4\n",
+      "Experiment 6: No. of heads = 4\n",
+      "Experiment 7: No. of heads = 6\n",
+      "Experiment 8: No. of heads = 4\n",
+      "Experiment 9: No. of heads = 7\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "for i in range(10):\n",
     "    result = np.random.rand(10)\n",
-    "    result[result<0.5]=0\n",
-    "    result[result>=0.5]=1\n",
-    "    mask_result = result[mask]\n",
-    "\n",
-    "    print(f\"Experiment {i}: No. of heads = {}\")"
+    "    heads = np.sum(result>0.5)\n",
+    "    print(f\"Experiment {i}: No. of heads = {heads}\")"
    ]
   }
  ],
