--- a/5.2_functions__exercises/functions_(good)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(good)_exercises.ipynb
@@ -1,1 +1,134 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Good) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Good) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee923a0c",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## Exercise 1 (Celsius to Fahrenheit or Kelvin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8a5ffd4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84.2 °F\n",
+      "302.15 °K\n",
+      "invalid target scale\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_celsius(temperature_celsius, target_scale=\"Fahrenheit\"):\n",
+    "    temperature_celsius = float(temperature_celsius)\n",
+    "    if target_scale == \"Kelvin\":\n",
+    "        return str(temperature_celsius + 273.15) + \" °K\"\n",
+    "    elif target_scale == \"Fahrenheit\":\n",
+    "        return str(9/5*temperature_celsius + 32) + \" °F\"\n",
+    "    else:\n",
+    "        return \"invalid target scale\"\n",
+    "\n",
+    "print(convert_celsius(29))\n",
+    "print(convert_celsius(29, \"Kelvin\"))\n",
+    "print(convert_celsius(29, \"hello\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d016904",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 (Fahrenheit to Celsius or Kelvin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f44c101e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_fahrenheit(temperature_fahrenheit, target_scale=\"Fahrenheit\"):\n",
+    "    if target_scale == \"Kelvin\":\n",
+    "        return (temperature_fahrenheit + 459.67)*5/9\n",
+    "    elif target_scale == \"Fahrenheit\":\n",
+    "        return 9/5*temperature_fahrenheit + 32\n",
+    "    else:\n",
+    "        return \"invalid target scale\"\n",
+    "\n",
+    "print(convert_celsius(29))\n",
+    "print(convert_celsius(29, \"Kelvin\"))\n",
+    "print(convert_celsius(29, \"hello\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54d5e7fa",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 (General Temperature Conversion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f979cc5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
