completed and addressed all comments

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(good),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(good),_exercises.ipynb
@@ -165,9 +165,9 @@
    "metadata": {},
    "source": [
     "__<u>Meanings of numbers in %%timeit:__</u><br>\n",
-    "__mean:__ average execution time per run<br>\n",
+    "__mean:__ average execution time per run, where each run refers to a batch of loops (1,000,000 loops in this case), of which the average runtime is obtained for loops in each run<br>\n",
     "__std. dev. of 7 runs:__ standard deviation across 7 repeats that %timeit or %%timeit performed<br>\n",
-    "__1,000,000 loops each:__ the code was run 1 million times in each repeat"
+    "__1,000,000 loops each:__ the code was run 1 million times in each repeat, one loop refers to a single execution of the block of code"
    ]
   },
   {
