--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -130,7 +130,7 @@
    "id": "b1b7f599-b760-4eb9-af7f-f68d4508052d",
    "metadata": {},
    "source": [
-    "What is a Git **repository**?<br>A Git repository is a project folder in Github that contains all the files in the project, and can keep track of changes made and different versions of the project."
+    "What is a Git **repository**?<br>A Git repository is a project folder in Github that contains all the files in the project, and can keep track of changes made and different versions of the project. It also stores the particulars of the author who made the commit and when."
    ]
   },
   {
