--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "7958a32b",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
     "    elif 0<=score<35:\n",
     "        print(\"The student's grade is: Fail\")\n",
     "except ValueError:\n",
-    "    print(\"The score must be a number!\")"
+    "    print(\"The score must be numerical!\")"
    ]
   },
   {
@@ -222,6 +222,44 @@
     "\n",
     "print(factorial(5))   # Testing, expected output: 120\n",
     "print(factorial(-1))  # Testing, expected output: Invalid input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de41fba2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n",
+      "Invalid input\n"
+     ]
+    }
+   ],
+   "source": [
+    "# As an optional bonus question (with no marks attached), how could you make this code even faster? (HINT: can you reduce the number of iterations of the for loop?)\n",
+    "# I had to ask someone :')\n",
+    "\n",
+    "def fast_factorial(n):\n",
+    "    if n < 0:\n",
+    "        return \"Invalid input\"\n",
+    "    elif n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    \n",
+    "    result = 1\n",
+    "    for i in range(1, n//2 + 1):\n",
+    "        result *= i * (n - i + 1)\n",
+    "    \n",
+    "    if n % 2 == 1:\n",
+    "        result *= (n//2 + 1)\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "print(fast_factorial(5))   # Testing, expected output: 120\n",
+    "print(fast_factorial(-1))  # Testing, expected output: Invalid input"
    ]
   }
  ],
