--- a/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "06c3fee2",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,12 @@
     "my_array[my_array<50] = -1\n",
     "my_array[my_array>50] = 1\n",
     "my_array[my_array==50] = 0\n",
-    "print(my_array)"
+    "print(my_array)\n",
+    "\n",
+    "# Optional: if you want to shorten the code even more, you can simply write the following to create your mask\n",
+    "# np_array_1d = np_array_2d[:, 0]\n",
+    "# np_array_1d = np_array_1d.astype(int)\n",
+    "# my_mask = np_array_1d % 2 > 0"
    ]
   }
  ],
