--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9063dab4",
    "metadata": {},
    "outputs": [
@@ -80,6 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Beryllium\n",
       "Beryllium\n",
       "Beryllium\n"
      ]
@@ -93,7 +94,10 @@
     "            'Fluorine',\n",
     "            'Neon']\n",
     "print(elements[3])\n",
-    "print(elements[-7])"
+    "print(elements[-7])\n",
+    "\n",
+    "# As an optional challenge, can you figure out how to access the element at the fourth index using reverse indexing without knowing how long the list is?\n",
+    "print(elements[-(len(elements) - 3)])"
    ]
   },
   {
