--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -19,8 +19,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7fed793a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 9, 25, 49, 81]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i**2 for i in range(10) if i%2!=0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26e0d6b",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 (Make me another odd list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "19e3b5fe",
    "metadata": {},
    "outputs": [
     {
@@ -43,35 +72,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e26e0d6b",
-   "metadata": {},
-   "source": [
-    "## Exercise 2 (Make me another odd list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "19e3b5fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 9, 25, 49, 81]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[i**2 for i in range(10) if i%2!=0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "25cf7b2c",
    "metadata": {},
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "200c5879",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,11 @@
    "id": "de0e0ab0",
    "metadata": {},
    "source": [
-    "The list made using the for list is faster than the one made by list comprehension."
+    "The list made by list comprehension is faster than the one made using for loop.\n",
+    "<br><br>\n",
+    "Optional: Can you suggest a reason why one method of creating a list is faster than the other?\n",
+    "<br>\n",
+    "List comprehensions are implemented more efficiently in C, reduce Python-level overhead, and avoid repeated method calls. (I had to search this up...)"
    ]
   },
   {
