--- a/4.2_loops__exercises/loops_(need)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(need)_exercises.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "e202c77a",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
     "]\n",
     "for temp_c in temperatures_celsius:\n",
     "    temp_f = 9/5*temp_c+32\n",
-    "    print(f\"{temp_c}°C = {temp_f:.1f}°F\")"
+    "    print(f\"{temp_c}°C = {temp_f}°F\")"
    ]
   },
   {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d594456d",
    "metadata": {},
    "outputs": [
@@ -70,24 +70,46 @@
      "output_type": "stream",
      "text": [
       "1 : 1   2   3   4   5   \n",
-      "\n",
-      "2 : 2   4   6   8   10   \n",
-      "\n",
-      "3 : 3   6   9   12   15   \n",
-      "\n",
-      "4 : 4   8   12   16   20   \n",
-      "\n",
-      "5 : 5   10   15   20   25   \n",
-      "\n"
+      "2 : 2   4   6   8   10  \n",
+      "3 : 3   6   9   12  15  \n",
+      "4 : 4   8   12  16  20  \n",
+      "5 : 5   10  15  20  25  \n"
      ]
     }
    ],
    "source": [
     "for n in [1,2,3,4,5]:\n",
-    "    print(f\"{n} : \", end = \"\")\n",
+    "    print(f\"{n} :\", end = \" \")\n",
     "    for m in [1,2,3,4,5]:\n",
-    "        print(f\"{m*n}\", end=\"   \")\n",
-    "    print(\"\\n\")"
+    "        print(f\"{m*n:<3}\", end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9deff804",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 1   2   3   4   5  \n",
+      "2 : 2   4   6   8   10 \n",
+      "3 : 3   6   9   12  15 \n",
+      "4 : 4   8   12  16  20 \n",
+      "5 : 5   10  15  20  25 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# optional: Can you think of two ways you could optimise this code?\n",
+    "# HINT 1: What variables are being repeated?\n",
+    "# HINT 2: f-strings can be used to combine multiple values into a single print statement...\n",
+    "for n in range(1,6):\n",
+    "    row = \" \".join(f\"{n*m:<3}\" for m in range(1,6))\n",
+    "    print(f\"{n} : {row}\")"
    ]
   },
   {
