--- a/5.2_functions__exercises/functions_(need)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(need)_exercises.ipynb
@@ -22,7 +22,7 @@
    "id": "cc1280a9",
    "metadata": {},
    "source": [
-    "The code works despite not having an else statement because the \"return\" immediately exits the funciton once it is executed. If the condition is not True, the function will skip the \"if\" block and continue to return f\"Hello {name}!\". The else statment is optional as well."
+    "The code works despite not having an else statement because the \"return\" immediately exits the function once it is executed. If the condition is not True, the function will skip the \"if\" block and continue to return f\"Hello {name}!\". The else statment is optional as well."
    ]
   },
   {
